boreal/tests/assets/invalid_files/parsing/str_to_oct_int.yar
rule a {
    condition:
        0o012345670123456701234567
}
